# speaker_diarization

./: .gitignore  Online_ASR_Microphone_Demo_Buffered_Streaming.ipynb  README.md  logs2.txt  main.py  nemo_test.ipynb  pyproject.toml  show.py
conf/: input_manifest.json
conf/inference/: diar_infer_general.yaml  diar_mdss_meeting.yaml
diarization_output/: manifest_vad_input.json
diarization_output/pred_rttms/: input.rttm
diarization_output/speaker_outputs/: subsegments_scale0.json  subsegments_scale1.json  subsegments_scale2.json  subsegments_scale2_cluster.label  subsegments_scale3.json  subsegments_scale4.json  subsegments_scale4_cluster.label
diarization_output/speaker_outputs/embeddings/: subsegments_scale0_embeddings.pkl  subsegments_scale1_embeddings.pkl  subsegments_scale2_embeddings.pkl  subsegments_scale3_embeddings.pkl  subsegments_scale4_embeddings.pkl
diarization_output/vad_outputs/: input.frame  input.txt  vad_out.json
diarization_output/vad_outputs/overlap_smoothing_output_median_0.5/: input.median
oracle_vad/: manifest_vad_input.json
oracle_vad/pred_rttms/: conversation.rttm
oracle_vad/speaker_outputs/: subsegments_scale0.json  subsegments_scale1.json  subsegments_scale2.json  subsegments_scale3.json  subsegments_scale4.json  subsegments_scale4_cluster.label
oracle_vad/speaker_outputs/embeddings/: subsegments_scale0_embeddings.pkl  subsegments_scale1_embeddings.pkl  subsegments_scale2_embeddings.pkl  subsegments_scale3_embeddings.pkl  subsegments_scale4_embeddings.pkl
oracle_vad/vad_outputs/: conversation.frame  conversation.txt  vad_out.json
